# quality-grading-ai

./: README.md  pyproject.toml
src/application/: services.py
src/domain/: entities.py  interfaces.py
src/infrastructure/: mock_classifier.py
src/presentation/: api.py
tests/: test_services.py
