[tool.poetry]
name = "quality-grading-ai"
version = "0.1.0"
description = "Clean Architecture skeleton for AI Quality Grading"
authors = ["test_ilya@mail.ru"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pydantic = "^2.5"
fastapi = "^0.111.0"
uvicorn = "^0.41.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-mock = "^4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
